--- a/web.html
+++ b/web.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web QR Member PoinKu</title>
-    <script>
-        window.location.href = "https://chat.kartel.my.id/bot";
-    </script>
+    <meta http-equiv="refresh" content="0;url=https://chat.kartel.my.id/bot">
 </head>
 <body>
     <p>Jika tidak dialihkan, klik <a href="https://chat.kartel.my.id/bot">di sini</a></p>
