--- a/qr_member.html
+++ b/qr_member.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web QR Member PoinKu</title>
-    <meta http-equiv="refresh" content="0;url=https://chat.kartel.my.id/bot">
+    <meta http-equiv="refresh" content="0;url=https://chat.kartel.my.id/poin">
 </head>
 <body>
-    <p>Jika tidak dialihkan, klik <a href="https://chat.kartel.my.id/bot">di sini</a></p>
+    <p>Jika tidak dialihkan, klik <a href="https://chat.kartel.my.id/poin">di sini</a></p>
 </body>
 </html>
